add tinygltf + basic http request

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@ if (DEFINED USE_EMSCRIPTEN AND USE_EMSCRIPTEN)
     file(COPY index.html DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/dist")
     file(COPY favicon.ico DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/dist")
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGPU=1")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGPU=1 -sFETCH")
 
     append_linker_flags("--js-library ${PROJECT_SOURCE_DIR}/Dependencies/wasm_webgpu/include/lib_webgpu.js")
 endif ()
@@ -44,6 +44,7 @@ target_include_directories(
         GameEngine PRIVATE
         Dependencies/glm/include
         Dependencies/GLFW/include
+        Dependencies/tinygltf/include
 )
 
 if (DEFINED USE_EMSCRIPTEN AND USE_EMSCRIPTEN)
