clean up project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,12 @@ project(GameEngine)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/dist)
 
-# macro from https://github.com/juj/wasm_webgpu/blob/main/samples/CMakeLists.txt
+# macros from https://github.com/juj/wasm_webgpu/blob/main/samples/CMakeLists.txt
+macro(append_compiler_flags FLAGS)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAGS}")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS}")
+endmacro()
+
 macro(append_linker_flags FLAGS)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${FLAGS}")
 endmacro()
@@ -13,9 +18,13 @@ if (DEFINED USE_EMSCRIPTEN AND USE_EMSCRIPTEN)
     file(COPY index.html DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/dist")
     file(COPY favicon.ico DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/dist")
 
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_WEBGPU=1 -sFETCH --proxy-to-worker -fexceptions -sALLOW_MEMORY_GROWTH --embed-file ../assets")
+    append_compiler_flags("-fexceptions")
 
     append_linker_flags("--js-library ${PROJECT_SOURCE_DIR}/Dependencies/wasm_webgpu/include/lib_webgpu.js")
+    append_linker_flags("--use-preload-cache")
+    append_linker_flags("--preload-file ../assets")
+else ()
+    file(COPY assets DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/dist")
 endif ()
 
 link_directories(Dependencies/GLFW/lib)
@@ -28,7 +37,6 @@ set(
 if (DEFINED USE_EMSCRIPTEN AND USE_EMSCRIPTEN)
     list(
             APPEND SOURCE_FILES
-            src/tiny_gltf_http_fs.cpp
             Dependencies/wasm_webgpu/include/lib_webgpu.cpp
             Dependencies/wasm_webgpu/include/lib_webgpu_cpp20.cpp
     )
