--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,10 @@ if (EMSCRIPTEN)
     append_linker_flags("--preload-file ../assets")
     append_linker_flags("--preload-file ../shaders")
     #    append_linker_flags("-sALLOW_MEMORY_GROWTH")
-    append_linker_flags("-sASYNCIFY=1")
+    #    append_linker_flags("-sASYNCIFY=1")
     append_linker_flags("-sUSE_WEBGPU=1")
+    append_linker_flags("-sUSE_GLFW=3")
+
 else ()
     file(COPY assets DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/dist")
     file(COPY shaders DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/dist")
