static time class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(
         src/sandbox/TestScript.cpp
         src/sandbox/TestRenderer.cpp
         src/rendering/backends/webgpu/WebGPURenderer.cpp
+        src/engine/Time.cpp
         Dependencies/imgui/src/imgui.cpp
         Dependencies/imgui/src/imgui_demo.cpp
         Dependencies/imgui/src/imgui_draw.cpp
