static random class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ set(
         src/rendering/backends/webgpu/WebGPURenderer.cpp
         src/engine/Time.cpp
         src/sandbox/TrackFramerate.cpp
+        src/engine/Random.cpp
         Dependencies/imgui/src/imgui.cpp
         Dependencies/imgui/src/imgui_demo.cpp
         Dependencies/imgui/src/imgui_draw.cpp
