imgui demo window script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,7 @@ set(
         src/engine/Time.cpp
         src/sandbox/TrackFramerate.cpp
         src/engine/Random.cpp
+        src/sandbox/ImGuiDemoWindow.cpp
         Dependencies/imgui/src/imgui.cpp
         Dependencies/imgui/src/imgui_demo.cpp
         Dependencies/imgui/src/imgui_draw.cpp
