GameEngine.hpp + start refactor of src to GameEngine

--- a/GameEngine/CMakeLists.txt
+++ b/GameEngine/CMakeLists.txt
@@ -47,7 +47,7 @@ if (EMSCRIPTEN)
 else ()
     list(
             APPEND SOURCE_FILES
-            #            src/webGPUDawn.cpp
+            #            GameEngine/webGPUDawn.cpp
     )
 endif ()
 
