--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,5 @@ project(GameEngineProject)
 set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(GameEngine)
-add_subdirectory(sandbox)
+add_subdirectory(Sandbox)
 add_subdirectory(tools)
