--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_subdirectory(GameEngine)
 add_subdirectory(Sandbox)
-add_subdirectory(tools)
+add_subdirectory(Tools)
