--- a/GameEngine/CMakeLists.txt
+++ b/GameEngine/CMakeLists.txt
@@ -23,6 +23,7 @@ set(
         src/GameEngine/Core/Window.cpp
         src/GameEngine/Core/Time.cpp
         src/GameEngine/Core/Input.cpp
+        src/GameEngine/Core/Exit.cpp
 
         src/GameEngine/Scene/Scene.cpp
         src/GameEngine/Scene/Entity.cpp
@@ -60,7 +61,11 @@ add_library(
 
 if (EMSCRIPTEN)
     target_compile_options(GameEngine PUBLIC -fexceptions)
-    target_link_options(GameEngine PUBLIC -fexceptions)
+    target_link_options(
+            GameEngine PUBLIC
+            -fexceptions
+            -sEXIT_RUNTIME
+    )
 endif ()
 
 target_precompile_headers(GameEngine PRIVATE src/gepch.hpp)
