basic asset packager working

--- a/Tools/CMakeLists.txt
+++ b/Tools/CMakeLists.txt
@@ -3,7 +3,7 @@ project(Tools)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(TestTool testTool.cpp)
+add_executable(TestTool PackageGLTF/packageGLTF.cpp)
 target_link_libraries(TestTool PRIVATE GameEngine)
 
 target_include_directories(
