--- a/GameEngine/CMakeLists.txt
+++ b/GameEngine/CMakeLists.txt
@@ -28,6 +28,7 @@ add_library(
         src/GameEngine/Scene/Scene.cpp
         src/GameEngine/Scene/Entity.cpp
         src/GameEngine/Scene/ScriptableEntity.cpp
+        src/GameEngine/Scene/Components.cpp
 
         src/GameEngine/Rendering/Backends/WebGPU/WebGPURenderer.cpp
         src/GameEngine/Rendering/Backends/WebGPU/WebGPUShader.cpp
